--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ include:
 collections:
   documentation:
     output: true
-    permalink: /docs/:path/
+    permalink: /posts/docs/:path/
 
 defaults:
   -
