Add "how to add a bot if it's not there"

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,7 @@ defaults:
       type: documentation
     values:
       layout: default
+
+webrick:
+  headers:
+    Access-Control-Allow-Origin: "*"
