make everything better

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ include:
 collections:
   documentation:
     output: true
-    permalink: /posts/:path/
+    permalink: /posts/:path
 
 defaults:
   -
