--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -3,3 +3,5 @@ escapedQuote: '\"'
 newline: "\n"
 discord: https://discord.gg/8uC6aKZ
 escapedNewline: "x-ls-newline"
+escapedBackslash: "x-ls-backslash"
+escapedTab: "x-ls-tab"
